--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -2,12 +2,12 @@
 <h1> QuickLink.IO</h1>
   <ion-item>
     <ion-label floating>Username</ion-label>
-    <ion-input type="text" [(ngModel)]="username"></ion-input>
+    <ion-input type="text" [(ngModel)]="username" required></ion-input>
   </ion-item>
 
   <ion-item>
     <ion-label floating>Password</ion-label>
-    <ion-input type="password" [(ngModel)]="password"></ion-input>
+    <ion-input type="password" [(ngModel)]="password" required></ion-input>
   </ion-item>
 
 </ion-list>
